<resources>
    <string name="app_name">Gasto_Viagem</string>
    <string name="calcular">Calcular</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_litro">Preço por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="seu_gasto_total_ser_de">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="distancia">Distancia</string>
    <string name="preencha_todos_campos">Preencha todos os campos!</string>
    <string name="Informe_valores_validos">Por favor, informe valores válidos!</string>
</resources>